[package]
name = "corral"
version = "0.1.1"
edition = "2021"

description = "A simple sprite sheet packer"
homepage = "https://github.com/danielclarke/corral"
repository = "https://github.com/danielclarke/corral"
readme = "README.md"
license = "MIT"
license-file = "LICENCE-MIT"

keywords = ["gamedev", "sprite", "spritesheet"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# serde-lua = {version = "0.1.0", path = "src/serde-lua"}

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
