[package]
name = "corral"
version = "0.1.1"
edition = "2021"

description = "A simple sprite sheet packer"
homepage = "https://github.com/danielclarke/corral"
repository = "https://github.com/danielclarke/corral"
readme = "README.md"
license = "MIT"

keywords = ["gamedev", "sprite", "spritesheet"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
